HTML linting test

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,6 @@
     <title>Udacity Capstone Project</title>
   </head>
   <body>
-    <p>Hello World, my name is <strong>Goodhope</strong></p>
+    <p>Hello World, my name is <strong>Goodhope</string></p>
   </body>
 </html>
